[package]
name = "issloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features  = ["json"]}
tokio = { version = "0.2", features = ["full"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ratatui = "0.26.3"
