[package]
name = "issloc"
version = "0.1.6"
edition = "2021"
description = "A crate that tracks the International Space Station."
repository = "https://github.com/CheetahCyberBoi/issloc"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ratatui = "0.26.3"
crossterm = "0.27.0"
pollster = "0.3.0"
ureq = { version = "2.9.7", features = ["json"] }
fern = "0.6.2"
log = "0.4.21"
humantime = "2.1.0"
